--- a/package.json
+++ b/package.json
@@ -150,5 +150,5 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0"
   },
-  "proxy": "http://tms-pc.test.qi-cloud.com/"
+  "proxy": "http://10.10.22.146:8080"
 }
